# NexFile

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
API/: cmd.h  head.h
NexFile/client/: client.c  clientsendMessage.c  clientsendMessage.h  cmdOpt.c  cmdOpt.h  config.c  config.h  encryption.c  encryption.h  epoll.c  fileOpt.c  fileOpt.h  status.c
NexFile/client/include/: clientConfig.h  clientsendMessage.h  cmdCheck.h  cmdOpt.h  epoll.h  fileOpt.h  sendCmd.h  status.h
NexFile/client/src/: Makefile  client.c  clientsendMessage.c  cmdCheck.c  cmdOpt.c  config.c  encryption.c  fileOpt.c  sendCmd.c  status.c
NexFile/server/: authen.c  clientHandle.c  clientHandle.h  cmdHandle.c  cmdHandle.h  configParser.c  fileHandle.c  filePath.c  recvCmd.c  recvCmd.h  sendMessage.c  server.c  serverConfig.h  taskQueue.c  tcpInit.c  threadPool.c  userStatus.c  userStatus.h  worker.c
NexFile/server/include/: authen.h  cmdHandle.h  configParser.h  fileHandle.h  fileOpt.h  filePath.h  recvCmd.h  sendMessage.h  taskQueue.h  threadPool.h  worker.h
NexFile/server/src/: authen.c  cmdHandle.c  configParser.c  epoll.c  fileHandle.c  fileOpt.c  filePath.c  recvCmd.c  sendMessage.c  server.c  taskQueue.c  tcpInit.c  threadPool.c  userStatus.c  worker.c
NexFile/shared/: Makefile  logger.h  protocol.h
client/: client.c  cmdCheck.c  sendCmd.c
databases/: user.sql
include/: logger.h
include/client/: cmdCheck.h  sendCmd.h
include/server/: fileOpt.h  recvCmd.h  tcpInit.h
server/: configParser.c  epoll.c  fileOpt.c  recvCmd.c  server.c  taskQueue.c  tcpInit.c  threadPool.c  worker.c
